<resources>
    <string name="app_name">EquipeRocket</string>
    <string name="title_activity_gasto_controller">GastoController</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>

    <string name="dialog_message_delete_gasto">Você tem certeza que deseja deletar o gasto atual?</string>
    <string name="delete">Deletar</string>
    <string name="cancel">Cancela</string>
    <string name="title_activity_gasto_detail_controller">GastoDetailController</string>
    <string name="dialog_message_delete_receita">Você tem certeza que deseja deletar a receita atual?</string>

    <string name="switch_gastos">Incluir Gastos</string>
    <string name="switch_receitas">Incluir Receitas</string>
    <string name="choose_dates">Período a ser exibido (Opcional)</string>
    <string name="button_define">Definir</string>
    <string name="start_date">Data inicial:</string>
    <string name="end_date">Data final:</string>
    <string name="button_gerar_relatorio">Criar Relatório</string>
    <string name="undef_date">Não definida</string>

    <string name="switch_grafico_receita">Incluir Receitas</string>
    <string name="switch_grafico_gasto">Incluir Gastos</string>
    <string name="text_grafico_dateSelection">Período a ser exibido (Opcional)</string>
    <string name="textView_grafico_data_inicial_header">Data inicial:</string>
    <string name="textView_grafico_data_final_header">Data final:</string>
    <string name="buttonText_grafico_definirData">Definir</string>
    <string name="textView_grafico_definirData">Não definida</string>
    <string name="buttonText_grafico_createGraph">Criar Gráfico</string>

    <string name="title_activity_relatorio_detail_controller">RelatorioDetailController</string>

    <string name="title_activity_receita_insert_controller">ReceitaInsertController</string>
    <string name="hint_name">Nome</string>
    <string name="hint_valor">Valor</string>
    <string name="hint_desc">Descrição (Opcional)</string>
    <string name="btn_rec_ins">Inserir Receita</string>
    <string name="err_msg_name_rec">Insira o nome da receita</string>
    <string name="err_msg_valor_rec">Insira o valor da receita</string>
    <string-array name="tipos_receita_array">
        <item>Rendimentos</item>
        <item>Salário</item>
        <item>Bônus</item>
        <item>Outros</item>
    </string-array>

    <string name="btn_gasto_mod">Modificar Gasto</string>

    <string name="btn_rec_mod">Modificar Receita</string>


    <string name="title_activity_gasto_insert_controller">GastoInsertController</string>
    <string name="btn_gasto_ins">Inserir Gasto</string>
    <string name="err_msg_name_gasto">Insira o nome do gasto</string>
    <string name="err_msg_valor_gasto">Insira o valor do gasto</string>
    <string-array name="tipos_gasto_array">
        <item>Alimentação</item>
        <item>Transporte</item>
        <item>Contas</item>
        <item>Lazer</item>
        <item>Outros</item>
    </string-array>
    <string name="title_activity_login">Sign in</string>

    <!-- Strings related to login -->
    <string name="prompt_user">Nome de usuário</string>
    <string name="prompt_password">Senha</string>
    <string name="action_sign_in">Entrar</string>
    <string name="action_sign_in_short">Entrar</string>
    <string name="error_invalid_user">Nome de usuário inválido.</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">Senha incorreta.</string>
    <string name="error_field_required">Campo deve ser preenchido.</string>
    <string name="title_activity_register_controller">Register</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Username</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="prompt_name">Nome</string>
    <string name="error_invalid_name">Nome inválido</string>
    <string name="registrar_se">Registrar-se</string>

</resources>
