<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="com.draft.rckt.equiperocket.Grafico.GraficoController"
    tools:showIn="@layout/app_bar_grafico_controller"
    android:orientation="vertical">

    <Switch
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="16sp"
        android:layout_marginTop="16dp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:text="@string/switch_grafico_receita"
        android:id="@+id/switch_grafico_receita_enabled" />



    <ExpandableListView
        android:id="@+id/expandableList_grafico_receita_filtro"
        android:divider="@color/mdtp_dark_gray"
        android:layout_marginTop="5dp"
        android:indicatorLeft="?android:attr/expandableListPreferredChildIndicatorLeft"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:dividerHeight="0.5dp">
    </ExpandableListView>

    <Switch
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="16sp"
        android:layout_marginTop="16dp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:text="@string/switch_grafico_gasto"
        android:id="@+id/switch_grafico_gasto_enabled" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="25dp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:text="@string/text_grafico_dateSelection"
        android:textSize="17sp"
        android:id="@+id/textView_selectDate_grafico" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="date"
        android:layout_marginTop="16dp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:ems="10"
        android:id="@+id/editText_grafico_startDate" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="date"
        android:layout_marginTop="16dp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:ems="10"
        android:id="@+id/editText_grafico_endDate" />


</LinearLayout>
