<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    tools:context="com.draft.rckt.equiperocket.Receita.ReceitaInsertController">

    <android.support.design.widget.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:theme="@style/AppTheme.AppBarOverlay">

        <android.support.v7.widget.Toolbar
            android:id="@+id/toolbar_receita_insert"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="?attr/colorPrimary"
            app:popupTheme="@style/AppTheme.PopupOverlay" >

            <TextView
                android:id="@+id/toolbar_receita_insert_title"
                style="@style/TextAppearance.AppCompat.Widget.ActionBar.Title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="left"
                android:text="Inserção de Receita"
                android:textAlignment="center"
                android:textColor="@android:color/white" />

        </android.support.v7.widget.Toolbar>

    </android.support.design.widget.AppBarLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="?attr/actionBarSize"
        android:paddingLeft="20dp"
        android:paddingRight="20dp"
        android:paddingTop="60dp"
        android:orientation="vertical">

        <!-- nome -->
        <android.support.design.widget.TextInputLayout
            android:id="@+id/input_layout_name_rec"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="5dp">

            <EditText
                android:id="@+id/input_name_rec"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:singleLine="true"
                android:hint="@string/hint_name" />
        </android.support.design.widget.TextInputLayout>

        <!-- valor -->
        <android.support.design.widget.TextInputLayout
            android:id="@+id/input_layout_valor_rec"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="5dp">

            <EditText
                android:id="@+id/input_valor_rec"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="numberDecimal"
                android:hint="@string/hint_valor" />
        </android.support.design.widget.TextInputLayout>

        <!-- descrição -->
        <android.support.design.widget.TextInputLayout
            android:id="@+id/input_layout_desc_rec"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="5dp">

            <EditText
                android:id="@+id/input_desc_rec"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/hint_desc" />
        </android.support.design.widget.TextInputLayout>

        <!-- tipo -->
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="5dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:text="Tipo:"
                android:id="@+id/text_rec_ins_tipo"
                android:layout_margin="5dp" />

            <Spinner
                android:layout_width="262dp"
                android:layout_height="wrap_content"
                android:id="@+id/spinner_tipo_rec"
                android:layout_margin="5dp" />
        </LinearLayout>

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:baselineAligned="false">

            <Button android:id="@+id/btn_rec_insert"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/btn_rec_ins"
                android:layout_weight="1"
                android:layout_gravity="center_vertical" />

            <Button
                style="?android:attr/buttonStyleSmall"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/button_cancel"
                android:id="@+id/button_cancel_rec_ins"
                android:layout_weight="1"
                android:layout_gravity="center_vertical"
                android:onClick="cancela" />
        </LinearLayout>

    </LinearLayout>

</android.support.design.widget.CoordinatorLayout>